# build-your-own-http-server

./: .gitignore  README.md  course-definition.yml  starter-repository-definitions.yml
compiled_starters/c/: README.md  your_program.sh
compiled_starters/clojure/: README.md  build.clj  codecrafters.yml  deps.edn  your_program.sh
compiled_starters/cpp/: CMakeLists.txt  README.md  vcpkg.json  your_program.sh
compiled_starters/csharp/: README.md  codecrafters-http-server.csproj  (+1 more)
dockerfiles/: bun-1.1.Dockerfile  c-9.2.Dockerfile  clojure-1.12.Dockerfile  cpp-20.Dockerfile  cpp-23.Dockerfile  dart-3-4.Dockerfile  dart-3.4.Dockerfile  deno-1.42.Dockerfile  dotnet-6.0.Dockerfile  dotnet-8.0.Dockerfile  dotnet-9.0.Dockerfile  go-1.21.Dockerfile  haskell-9.4.Dockerfile  haskell-9.8.Dockerfile  java-21.Dockerfile  kotlin-2.0.Dockerfile  nodejs-21.Dockerfile  ocaml-5.4.Dockerfile  odin-2026.1.Dockerfile  php-8.5.Dockerfile  python-3.11.Dockerfile  python-3.12.Dockerfile  python-3.13.Dockerfile  rust-1.70.Dockerfile  rust-1.76.Dockerfile  rust-1.77.Dockerfile  zig-0.12.Dockerfile
solutions/ocaml/01-at4/code/: README.md  dune-project
solutions/ocaml/01-at4/code/src/: main.ml
stage_descriptions/: base-01-at4.md  base-02-ia4.md  base-03-ih0.md  base-04-cn2.md  base-05-fs3.md  base-06-ej5.md  base-07-ap6.md  base-08-qv8.md  http-compression-01-df4.md  http-compression-02-ij8.md  http-compression-03-cr8.md  http-persistent-connections-01-ag9.md  http-persistent-connections-02-ul1.md  http-persistent-connections-03-kh7.md
starter_templates/: README.md  codecrafters.yml
(+330 files in other folders)
