(lang dune 3.21)

(name codecrafters_http_server)

(generate_opam_files true)

(package
 (name codecrafters_http_server)
 (maintainers "CodeCrafters <hello@codecrafters.io>")
 (authors "CodeCrafters <hello@codecrafters.io>")
 (synopsis "Starter code for the Build your own HTTP server challenge")
 (homepage "https://codecrafters.io")
 (bug_reports
  "https://github.com/codecrafters-io/build-your-own-http-server/issues")
 (license "MIT")
 (allow_empty true)
 (version 0.1))
